[package]
name = "bandwidth-medea-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
actix-codec = "0.5"
webrtc = { path = "/media/alexlapa/drive2/AndroidStudioProjects/webrtc-evdokimovs/webrtc", features = ["openssl", "vendored-openssl"] }
tokio = { version = "1.5", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tokio-util = "0.7"
medea-client-api-proto = { version = "0.5", features = ["server"] }
medea-control-api-proto = { version = "0.9", features = ["client", "direct", "grpc", "server"] }
futures = "0.3"
actix = "0.13"
actix-rt = "2.2"
actix-http = "3.0"
actix-service = "2.0"
actix-web = "4.0"
actix-web-actors = "4.0.1"
async-trait = "0.1"
awc = "3.0"
bytes = "1.0"
tonic = { version = "0.9" }
derive_builder = "0.12"
clap = "4.3"
serde_json = "1.0"
